--- a/2_scripts/Site_geo_location_explore.ipynb
+++ b/2_scripts/Site_geo_location_explore.ipynb
@@ -353,7 +353,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.8.8 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -368,6 +368,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.8.8"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "5ceecb7da2aafc3df56a72e3d5d21f12f2307c7cf9b9b8f49c6cfc619e649209"
+   }
   }
  },
  "nbformat": 4,
