--- a/2_scripts/01_preprocessing.ipynb
+++ b/2_scripts/01_preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "1e58b34f",
    "metadata": {},
    "outputs": [],
@@ -17,13 +17,12 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "df=pd.read_csv(\"../1_data/private/SANBS Donations (3 Nov 2022).csv\")\n",
-    "\n"
+    "df=pd.read_csv(\"../1_data/private/SANBS Donations (3 Nov 2022).csv\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "efb5add5",
    "metadata": {},
    "outputs": [],
@@ -42,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "96b8658a",
    "metadata": {},
    "outputs": [],
@@ -64,28 +63,70 @@
     "#df['time_to_return'].fillna((df['VISIT_DATE'].shift(-1)-df[\"VISIT_DATE\"])/np.timedelta64(1, 'D'), inplace=True)\n",
     "\n",
     "#remove permanent deferrals\n",
-    "df.drop(df[df.Deferral_permanent == 'Perm'].index, inplace=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "36491424",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#compute time_to_return with shifts for completed donation: subtract 56 days \n",
-    "df['time_to_return'] = np.where(df['OUTCOME_TYPE'] == 'completed', df['time_to_return'] - 56, df['time_to_return'])\n",
-    "\n",
-    "###\n",
-    "#compute time_to_return with shifts for other donations\n",
-    "#first covert eligibilty year and month to a datetime object\n",
+    "df.drop(df[df.Deferral_permanent == 'Perm'].index, inplace=True)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
+   "id": "7417caed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9746"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"df['time_to_return'].mask(df['OUTCOME_TYPE']=='completed', (df['time_to_return'] - 56), inplace=True)\n",
+    "df['time_to_return'].mask(df['OUTCOME_TYPE']=='low hgb', (df['time_to_return'] - ((df['Def_end'] - df['Visit_Date'])/np.timedelta64(1, 'D'))), inplace=True)\n",
+    "df['time_to_return'].mask(df['OUTCOME_TYPE']=='other deferral', (df['time_to_return'] - ((df['Def_end'] - df['Visit_Date'])/np.timedelta64(1, 'D'))), inplace=True)\n",
+    "df['time_to_return'].isna().sum()\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36491424",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9746"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#compute time_to_return with shifts for completed donation: subtract 56 days \n",
+    "df['time_to_return'] = np.where(df['OUTCOME_TYPE'] == 'completed', (df['time_to_return'] - 56), df['time_to_return'])\n",
+    "\n",
+    "#compute time_to_return with shifts for other donations\n",
+    "#first covert eligibilty year and month to a datetime object\n",
+    "\n",
+    "df[\"Def_end\"] = df[\"Def_end\"].astype(\"datetime64\")\n",
+    "\n",
+    "\n",
+    "df['time_to_return'] = np.where(df['OUTCOME_TYPE'] == 'low hgb', (df['time_to_return'] - ((df['Def_end'] - df['Visit_Date'])/np.timedelta64(1, 'D'))), df['time_to_return'])\n",
+    "\n",
+    "#df['time_to_return'] = np.where(df['OUTCOME_TYPE'] == 'other deferral', (df['time_to_return'] - ((df['Def_end'] - df['Visit_Date'])/np.timedelta64(1, 'D'))), df['time_to_return'])\n",
+    "df['time_to_return'].isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d900c16f",
    "metadata": {},
    "outputs": [
@@ -138,7 +179,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
+   "id": "185fb6e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9746"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['time_to_return'].isnull().sum()\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4af63afc",
    "metadata": {},
    "outputs": [],
@@ -163,7 +227,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.8 (default, Apr 13 2021, 15:08:03) [MSC v.1916 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
