--- a/2_scripts/SANBS_explore.ipynb
+++ b/2_scripts/SANBS_explore.ipynb
@@ -956,7 +956,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.8 ('base')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -970,7 +970,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8 (default, Apr 13 2021, 15:08:03) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.8.8"
   },
   "vscode": {
    "interpreter": {
