--- a/2_scripts/03_penalized_cox_regression.ipynb
+++ b/2_scripts/03_penalized_cox_regression.ipynb
@@ -6,12 +6,238 @@
    "id": "d0aff929",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#penalized cox model to predict factors influencing donors time to return\n",
+    "\n",
+    "# Cox Penalized Regression model with LASSO Penalty\n",
+    "\n",
+    "#-- two models after completed and after deferral\n",
+    "#keep only WB \n",
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import datetime as dt\n",
+    "from datetime import timedelta\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "\n",
+    "from sksurv.linear_model import CoxnetSurvivalAnalysis\n",
+    "from sklearn.model_selection import GridSearchCV, KFold, train_test_split\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.exceptions import FitFailedWarning\n",
+    "import sksurv.util\n",
+    "import warnings\n",
+    "\n",
+    "df=pd.read_csv(\"../1_data/private/preprocessed_data.csv\")\n",
+    "\n",
+    "mask = (df['Visit_yr'] >= 2017) \n",
+    "df = df.loc[mask]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "32d66433",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(list(df.columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d71a9492",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert columns to categorical varibles\n",
+    "cols = ['SEX', 'SPONSORTYPE', 'ABO_RH', 'DONTYPE', 'TRANSFUS', 'BORNUSA', 'EDUCATION', 'FTEVER', 'PREGNANT', 'NUMPREG', 'ETHNICITY', 'RACERECODE', 'THIRTYDSMOKED' ]\n",
+    "df_cox[cols] = df_cox[cols].astype('category')\n",
+    "\n",
+    "df_cox = pd.get_dummies(df_cox, prefix=cols, dummy_na=True, columns = cols)\n",
+    "\n",
+    "covariates = ['AGE', 'DAYS_SINCE_LAST_VISIT', 'DAYS_UNTIL_NEXT_VISIT', 'if_repeat', 'donor_status', 'next_if_defer', 'outcome_next', 'RBCunits.x', 'RBCunits.y', 'RBC_units_last_18m', 'RBCunits', 'HB_def_last_18m', 'HB_mean_last_18m', 'HB_min_last_18m', 'NumDonations_last_18m', 'NumVists_last_18m', 'SEX_0.0', 'SEX_1.0', 'SEX_9.0', 'SEX_nan', 'SPONSORTYPE_999', 'SPONSORTYPE_CHU', 'SPONSORTYPE_CIV', 'SPONSORTYPE_COL', 'SPONSORTYPE_COR', 'SPONSORTYPE_FIX', 'SPONSORTYPE_HEA', 'SPONSORTYPE_HS', 'SPONSORTYPE_IND', 'SPONSORTYPE_MIL', 'SPONSORTYPE_SER', 'SPONSORTYPE_nan', 'ABO_RH_A+', 'ABO_RH_A-', 'ABO_RH_AB+', 'ABO_RH_AB-', 'ABO_RH_B+', 'ABO_RH_B-', 'ABO_RH_O+', 'ABO_RH_O-', 'ABO_RH_OH+', 'ABO_RH_nan', 'DONTYPE_9', 'DONTYPE_A', 'DONTYPE_D', 'DONTYPE_H', 'DONTYPE_O', 'DONTYPE_R', 'DONTYPE_T', 'DONTYPE_nan', 'TRANSFUS_9', 'TRANSFUS_N', 'TRANSFUS_Y', 'TRANSFUS_nan', 'BORNUSA_-1.0', 'BORNUSA_0.0', 'BORNUSA_1.0', 'BORNUSA_nan', 'EDUCATION_A', 'EDUCATION_B', 'EDUCATION_C', 'EDUCATION_D', 'EDUCATION_E', 'EDUCATION_F', 'EDUCATION_S', 'EDUCATION_nan', 'FTEVER_-1.0', 'FTEVER_0.0', 'FTEVER_1.0', 'FTEVER_nan', 'PREGNANT_-1.0', 'PREGNANT_0.0', 'PREGNANT_1.0', 'PREGNANT_nan', 'NUMPREG_0.0', 'NUMPREG_1.0', 'NUMPREG_2.0', 'NUMPREG_3.0', 'NUMPREG_4.0', 'NUMPREG_5.0', 'NUMPREG_6.0', 'NUMPREG_nan', 'ETHNICITY_-1.0', 'ETHNICITY_0.0', 'ETHNICITY_1.0', 'ETHNICITY_nan', 'RACERECODE_1', 'RACERECODE_2', 'RACERECODE_3', 'RACERECODE_4', 'RACERECODE_5', 'RACERECODE_88', 'RACERECODE_O', 'RACERECODE_nan', 'THIRTYDSMOKED_9', 'THIRTYDSMOKED_N', 'THIRTYDSMOKED_Y', 'THIRTYDSMOKED_nan']\n",
+    "#- so deferral period is a covariate\n",
+    "#- deferral is a covariate\n",
+    "#- index donation is a covarite (M,F)\n",
+    "#- split by repeat, first time and recativated\n",
+    "#- add one one column for idi\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1bcddb16",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#helper functions to make plots\n",
+    "\n",
+    "#a function to plot coefficients \n",
+    "def plot_coef(coefs, n_highlight):\n",
+    "    _, ax = plt.subplots(figsize=(9, 6))\n",
+    "    n_features = coefs.shape[0]\n",
+    "    alphas = coefs.columns\n",
+    "    for row in coefs.itertuples():\n",
+    "        ax.semilogx(alphas, row[1:], \".-\", label=row.Index)\n",
+    "        \n",
+    "    alpha_min = alphas.min()\n",
+    "    top_coefs = coefs.loc[:, alpha_min].map(abs).sort_values().tail(n_highlight)\n",
+    "    for name in top_coefs.index:\n",
+    "        coef = coefs.loc[name, alpha_min]\n",
+    "        plt.text(\n",
+    "            alpha_min, coef, name + \"   \",\n",
+    "            horizontalalignment=\"right\",\n",
+    "            verticalalignment=\"center\"\n",
+    "        )\n",
+    "\n",
+    "    ax.yaxis.set_label_position(\"right\")\n",
+    "    ax.yaxis.tick_right()\n",
+    "    ax.grid(True)\n",
+    "    ax.set_xlabel(\"alpha\")\n",
+    "    ax.set_ylabel(\"coefficient\")\n",
+    "    \n",
+    "#plot mean concordance index and std deviation for each alpa across all folds\n",
+    "def plot_mean_concordance_index(alphas, mean, std, gridCV):\n",
+    "    fig, ax = plt.subplots(figsize=(9, 6))\n",
+    "    ax.plot(alphas, mean)\n",
+    "    ax.fill_between(alphas, mean - std, mean + std, alpha=.15)\n",
+    "    ax.set_xscale(\"log\")\n",
+    "    ax.set_ylabel(\"concordance index\")\n",
+    "    ax.set_xlabel(\"alpha\")\n",
+    "    ax.axvline(gridCV.best_params_[\"coxnetsurvivalanalysis__alphas\"][0], c=\"C1\")\n",
+    "    ax.axhline(0.5, color=\"grey\", linestyle=\"--\")\n",
+    "    ax.grid(True)\n",
+    "    \n",
+    "#plot coefficients to be used\n",
+    "def plot_coef_to_use(non_zero_coefs, coef_order):\n",
+    "    _, ax = plt.subplots(figsize=(6, 8))\n",
+    "    non_zero_coefs.loc[coef_order].plot.barh(ax=ax, legend=False)\n",
+    "    ax.set_xlabel(\"coefficient\")\n",
+    "    ax.grid(True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "724c8d29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#helper function for feature selection\n",
+    "\n",
+    "def feature_selection(cox_lasso, X_train, Y_train):\n",
+    "    \n",
+    "    #generate and plot coeffecients to choose best aplha\n",
+    "    coef_lasso = pd.DataFrame(\n",
+    "        cox_lasso.coef_,\n",
+    "        index=X_train.columns,\n",
+    "        columns=np.round(cox_lasso.alphas_, 5)\n",
+    "    )\n",
+    "\n",
+    "    plot_coef(coef_lasso, n_highlight=5)\n",
+    "    \n",
+    "    #choosing the right aplha\n",
+    "    pipe = make_pipeline(\n",
+    "        StandardScaler(),\n",
+    "        CoxnetSurvivalAnalysis(l1_ratio=0.9, alpha_min_ratio=0.01, max_iter=100)\n",
+    "    )\n",
+    "    warnings.simplefilter(\"ignore\", UserWarning)\n",
+    "    warnings.simplefilter(\"ignore\", FitFailedWarning)\n",
+    "    pipe.fit(X_train, Y_train)\n",
+    "    \n",
+    "    #performing 5 fold cross validation\n",
+    "    estimated_alphas = pipe.named_steps[\"coxnetsurvivalanalysis\"].alphas_\n",
+    "    cv = KFold(n_splits=5, shuffle=True, random_state=0)\n",
+    "    gridCV = GridSearchCV(\n",
+    "            make_pipeline(StandardScaler(), CoxnetSurvivalAnalysis(l1_ratio=0.9)),\n",
+    "            param_grid={\"coxnetsurvivalanalysis__alphas\": [[v] for v in estimated_alphas]},\n",
+    "            cv=cv,\n",
+    "            error_score=0.5,\n",
+    "            n_jobs=4).fit(X_train, Y_train)\n",
+    "\n",
+    "    results = pd.DataFrame(gridCV.cv_results_)\n",
+    "    \n",
+    "    #plot mean_concordance index\n",
+    "    alphas = results.param_coxnetsurvivalanalysis__alphas.map(lambda x: x[0])\n",
+    "    mean = results.mean_test_score\n",
+    "    std = results.std_test_score\n",
+    "    \n",
+    "    plot_mean_concordance_index(alphas, mean, std, gridCV)\n",
+    "    \n",
+    "    #choose best model, \n",
+    "    best_model = gridCV.best_estimator_.named_steps[\"coxnetsurvivalanalysis\"]\n",
+    "    best_coefs = pd.DataFrame(\n",
+    "        best_model.coef_,\n",
+    "        index=X_train.columns,\n",
+    "        columns=[\"coefficient\"]\n",
+    "    )\n",
+    "\n",
+    "    #number of coefficients that are not zero\n",
+    "    non_zero = np.sum(best_coefs.iloc[:, 0] != 0)\n",
+    "    print(\"Number of non-zero coefficients: {}\".format(non_zero))\n",
+    "\n",
+    "    \n",
+    "    #create a list of coefs to be used\n",
+    "    non_zero_coefs = best_coefs.query(\"coefficient != 0\")\n",
+    "    coef_order = non_zero_coefs.abs().sort_values(\"coefficient\").index\n",
+    "    \n",
+    "    #plot_coefficients to be used\n",
+    "    plot_coef_to_use(non_zero_coefs, coef_order)\n",
+    "    \n",
+    "    return gridCV\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99559e6e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#model fitting\n",
+    "df_cox_def = df_cox.query(\"DEF_TYPE == 'low hgb'\")\n",
+    "X = df_cox_def.loc[:, covariates]\n",
+    "\n",
+    "   #Structured array\n",
+    "Y= sksurv.util.Surv.from_dataframe('CENSORED', 'time_to_event', df_cox_def)\n",
+    "\n",
+    "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.90, random_state=42)\n",
+    "\n",
+    "#fit the model\n",
+    "cox_lasso = CoxnetSurvivalAnalysis(l1_ratio=1.0, alpha_min_ratio=0.01)\n",
+    "cox_lasso.fit(X_train, Y_train)\n",
+    "\n",
+    "gcv = feature_selection(cox_lasso, X_train, Y_train)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9b20e02",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#prediction\n",
+    "\n",
+    "#fit test set to perfrom prediction of hazard function and survival function\n",
+    "coxnet_pred = make_pipeline(\n",
+    "    StandardScaler(),\n",
+    "    CoxnetSurvivalAnalysis(l1_ratio=0.9, fit_baseline_model=True)\n",
+    ")\n",
+    "coxnet_pred.set_params(**gcv.best_params_)\n",
+    "coxnet_pred.fit(X_test, Y_test)\n",
+    "\n",
+    "#surv_fns = coxnet_pred.predict_survival_function(X_test)\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -25,7 +251,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.8 (default, Apr 13 2021, 15:08:03) [MSC v.1916 64 bit (AMD64)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "5ceecb7da2aafc3df56a72e3d5d21f12f2307c7cf9b9b8f49c6cfc619e649209"
+   }
   }
  },
  "nbformat": 4,
