--- a/2_scripts/03_penalized_cox_regression.ipynb
+++ b/2_scripts/03_penalized_cox_regression.ipynb
@@ -33,7 +33,9 @@
     "df=pd.read_csv(\"../1_data/private/preprocessed_data.csv\")\n",
     "\n",
     "mask = (df['Visit_yr'] >= 2017) \n",
-    "df = df.loc[mask]"
+    "df = df.loc[mask]\n",
+    "\n",
+    "df_cox=df #keep only WB donations"
    ]
   },
   {
