--- a/2_scripts/03_penalized_cox_regression.ipynb
+++ b/2_scripts/03_penalized_cox_regression.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "d0aff929",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jagir\\anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3165: DtypeWarning: Columns (17) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n"
+     ]
+    }
+   ],
    "source": [
     "#penalized cox model to predict factors influencing donors time to return\n",
     "\n",
@@ -23,6 +32,8 @@
     "import seaborn as sns\n",
     "\n",
     "from sksurv.linear_model import CoxnetSurvivalAnalysis\n",
+    "from sksurv.linear_model import CoxPHSurvivalAnalysis\n",
+    "\n",
     "from sklearn.model_selection import GridSearchCV, KFold, train_test_split\n",
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.preprocessing import StandardScaler\n",
@@ -30,48 +41,90 @@
     "import sksurv.util\n",
     "import warnings\n",
     "\n",
+    "from sksurv.preprocessing import OneHotEncoder\n",
+    "\n",
+    "\n",
     "df=pd.read_csv(\"../1_data/private/preprocessed_data.csv\")\n",
     "\n",
     "mask = (df['Visit_yr'] >= 2017) \n",
     "df = df.loc[mask]\n",
     "\n",
-    "df_cox=df #keep only WB donations"
+    "df_cox=df "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "32d66433",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['DonorID', 'Visit_Date', 'Visit_yr', 'Visit_Mo', 'donation_time', 'don_Sequence', 'col_Int', 'Visit_Age', 'sex', 'Fixed', 'MobileID', 'donation_product_x', 'DonProc', 'Outcome', 'ABO_RH', 'Disease_marker_results', 'HB_Value', 'race_group', 'race', 'Ferritin', 'category', 'DefCode', 'Def_start', 'Def_end', 'Deferral_permanent', 'EffectiveYr', 'EffectiveMo', 'OUTCOME_TYPE', 'CENSORED', 'time_to_return', 'Fixed_mobile', 'FIXED_NEXT', 'fixed_mobile_pattern', 'index', 'donation_product_y', 'first_time']\n"
+     ]
+    }
+   ],
    "source": [
     "print(list(df.columns))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "d71a9492",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['DonorID', 'Visit_Date', 'Visit_yr', 'Visit_Mo', 'donation_time', 'don_Sequence', 'col_Int', 'Visit_Age', 'Fixed', 'MobileID', 'donation_product_x', 'DonProc', 'Outcome', 'ABO_RH', 'Disease_marker_results', 'HB_Value', 'race_group', 'race', 'Ferritin', 'category', 'DefCode', 'Def_start', 'Def_end', 'Deferral_permanent', 'EffectiveYr', 'EffectiveMo', 'CENSORED', 'time_to_return', 'Fixed_mobile', 'FIXED_NEXT', 'fixed_mobile_pattern', 'index', 'donation_product_y', 'first_time', 'sex_F', 'sex_M', 'sex_nan', 'OUTCOME_TYPE_completed', 'OUTCOME_TYPE_low hgb', 'OUTCOME_TYPE_no draw', 'OUTCOME_TYPE_other deferral', 'OUTCOME_TYPE_nan']\n"
+     ]
+    }
+   ],
    "source": [
     "# convert columns to categorical varibles\n",
-    "cols = ['SEX', 'SPONSORTYPE', 'ABO_RH', 'DONTYPE', 'TRANSFUS', 'BORNUSA', 'EDUCATION', 'FTEVER', 'PREGNANT', 'NUMPREG', 'ETHNICITY', 'RACERECODE', 'THIRTYDSMOKED' ]\n",
+    "cols = ['sex', 'OUTCOME_TYPE']\n",
     "df_cox[cols] = df_cox[cols].astype('category')\n",
     "\n",
     "df_cox = pd.get_dummies(df_cox, prefix=cols, dummy_na=True, columns = cols)\n",
     "\n",
-    "covariates = ['AGE', 'DAYS_SINCE_LAST_VISIT', 'DAYS_UNTIL_NEXT_VISIT', 'if_repeat', 'donor_status', 'next_if_defer', 'outcome_next', 'RBCunits.x', 'RBCunits.y', 'RBC_units_last_18m', 'RBCunits', 'HB_def_last_18m', 'HB_mean_last_18m', 'HB_min_last_18m', 'NumDonations_last_18m', 'NumVists_last_18m', 'SEX_0.0', 'SEX_1.0', 'SEX_9.0', 'SEX_nan', 'SPONSORTYPE_999', 'SPONSORTYPE_CHU', 'SPONSORTYPE_CIV', 'SPONSORTYPE_COL', 'SPONSORTYPE_COR', 'SPONSORTYPE_FIX', 'SPONSORTYPE_HEA', 'SPONSORTYPE_HS', 'SPONSORTYPE_IND', 'SPONSORTYPE_MIL', 'SPONSORTYPE_SER', 'SPONSORTYPE_nan', 'ABO_RH_A+', 'ABO_RH_A-', 'ABO_RH_AB+', 'ABO_RH_AB-', 'ABO_RH_B+', 'ABO_RH_B-', 'ABO_RH_O+', 'ABO_RH_O-', 'ABO_RH_OH+', 'ABO_RH_nan', 'DONTYPE_9', 'DONTYPE_A', 'DONTYPE_D', 'DONTYPE_H', 'DONTYPE_O', 'DONTYPE_R', 'DONTYPE_T', 'DONTYPE_nan', 'TRANSFUS_9', 'TRANSFUS_N', 'TRANSFUS_Y', 'TRANSFUS_nan', 'BORNUSA_-1.0', 'BORNUSA_0.0', 'BORNUSA_1.0', 'BORNUSA_nan', 'EDUCATION_A', 'EDUCATION_B', 'EDUCATION_C', 'EDUCATION_D', 'EDUCATION_E', 'EDUCATION_F', 'EDUCATION_S', 'EDUCATION_nan', 'FTEVER_-1.0', 'FTEVER_0.0', 'FTEVER_1.0', 'FTEVER_nan', 'PREGNANT_-1.0', 'PREGNANT_0.0', 'PREGNANT_1.0', 'PREGNANT_nan', 'NUMPREG_0.0', 'NUMPREG_1.0', 'NUMPREG_2.0', 'NUMPREG_3.0', 'NUMPREG_4.0', 'NUMPREG_5.0', 'NUMPREG_6.0', 'NUMPREG_nan', 'ETHNICITY_-1.0', 'ETHNICITY_0.0', 'ETHNICITY_1.0', 'ETHNICITY_nan', 'RACERECODE_1', 'RACERECODE_2', 'RACERECODE_3', 'RACERECODE_4', 'RACERECODE_5', 'RACERECODE_88', 'RACERECODE_O', 'RACERECODE_nan', 'THIRTYDSMOKED_9', 'THIRTYDSMOKED_N', 'THIRTYDSMOKED_Y', 'THIRTYDSMOKED_nan']\n",
+    "print(list(df_cox.columns))\n",
+    "\n",
+    "# 'Visit_yr', 'Visit_Mo', 'race_group', 'Ferritin',  'HB_Value', 'donation_product',\n",
+    "covariates = ['Visit_Age', 'sex_F', 'sex_M', 'Fixed_mobile', 'OUTCOME_TYPE_completed', 'OUTCOME_TYPE_low hgb', 'OUTCOME_TYPE_no draw', 'OUTCOME_TYPE_other deferral']\n",
+    "\n",
     "#- so deferral period is a covariate\n",
     "#- deferral is a covariate\n",
-    "#- index donation is a covarite (M,F)\n",
-    "#- split by repeat, first time and recativated\n",
-    "#- add one one column for idi\n"
+    "#- index donation is a covarite (M,F) \n",
+    "#- add one one column for idi\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "id": "c943d7af",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['DonorID', 'Visit_Date', 'Visit_yr', 'Visit_Mo', 'donation_time', 'don_Sequence', 'col_Int', 'Visit_Age', 'Fixed', 'MobileID', 'donation_product_x', 'DonProc', 'Outcome', 'ABO_RH', 'Disease_marker_results', 'HB_Value', 'race_group', 'race', 'Ferritin', 'category', 'DefCode', 'Def_start', 'Def_end', 'Deferral_permanent', 'EffectiveYr', 'EffectiveMo', 'CENSORED', 'time_to_return', 'Fixed_mobile', 'FIXED_NEXT', 'fixed_mobile_pattern', 'index', 'donation_product_y', 'first_time', 'sex_F', 'sex_M', 'sex_nan', 'OUTCOME_TYPE_completed', 'OUTCOME_TYPE_low hgb', 'OUTCOME_TYPE_no draw', 'OUTCOME_TYPE_other deferral', 'OUTCOME_TYPE_nan']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(list(df_cox.columns))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "1bcddb16",
    "metadata": {},
    "outputs": [],
@@ -124,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "724c8d29",
    "metadata": {},
    "outputs": [],
@@ -139,8 +192,11 @@
     "        index=X_train.columns,\n",
     "        columns=np.round(cox_lasso.alphas_, 5)\n",
     "    )\n",
+    "    \n",
+    "    \n",
     "\n",
     "    plot_coef(coef_lasso, n_highlight=5)\n",
+    "    \n",
     "    \n",
     "    #choosing the right aplha\n",
     "    pipe = make_pipeline(\n",
@@ -195,24 +251,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "99559e6e",
+   "execution_count": 7,
+   "id": "459e0a12",
    "metadata": {},
    "outputs": [],
    "source": [
+    "##df_cox.fillna(999, inplace=True)\n",
+    "#df_cox.replace([np.inf, -np.inf], np.nan, inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "99559e6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CoxPHSurvivalAnalysis()"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "#model fitting\n",
-    "df_cox_def = df_cox.query(\"DEF_TYPE == 'low hgb'\")\n",
-    "X = df_cox_def.loc[:, covariates]\n",
+    "#df_cox_def = df_cox.query(\"DEF_TYPE == 'low hgb'\")\n",
+    "#X = df_cox.loc[:, covariates]\n",
+    "\n",
+    "\n",
+    "x_df=df_cox[['sex', 'OUTCOME_TYPE', \"Fixed_mobile\", 'race_group']].astype('category')\n",
+    "\n",
+    "X = OneHotEncoder().fit_transform(x_df)\n",
+    "X.head()\n",
+    "\n",
+    "#X= df_cox.reindex(columns=covariates)\n",
     "\n",
     "   #Structured array\n",
-    "Y= sksurv.util.Surv.from_dataframe('CENSORED', 'time_to_event', df_cox_def)\n",
+    "Y= sksurv.util.Surv.from_dataframe('CENSORED', 'time_to_return', df_cox)\n",
     "\n",
     "X_train, X_test, Y_train, Y_test = train_test_split(X, Y, test_size=0.90, random_state=42)\n",
     "\n",
     "#fit the model\n",
-    "cox_lasso = CoxnetSurvivalAnalysis(l1_ratio=1.0, alpha_min_ratio=0.01)\n",
+    "#cox_lasso = CoxnetSurvivalAnalysis(l1_ratio=1.0, alpha_min_ratio=0.01)\n",
+    "cox_lasso = CoxPHSurvivalAnalysis()\n",
     "cox_lasso.fit(X_train, Y_train)\n",
     "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "ba1bbe0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sex=M                          0.157304\n",
+      "OUTCOME_TYPE=low hgb          -0.439231\n",
+      "OUTCOME_TYPE=no draw          -0.175705\n",
+      "OUTCOME_TYPE=other deferral   -0.267083\n",
+      "Fixed_mobile=1                 0.468717\n",
+      "race_group=2                  -0.078720\n",
+      "race_group=3                  -0.014800\n",
+      "race_group=4                  -0.019882\n",
+      "race_group=1                  -0.165779\n",
+      "race_group=2                  -0.366405\n",
+      "race_group=3                  -0.183603\n",
+      "race_group=4                  -0.287973\n",
+      "race_group=U                  -0.337439\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(pd.Series(cox_lasso.coef_, index=X_train.columns))\n",
+    "#cox_lasso.coef_\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7cf95a83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "gcv = feature_selection(cox_lasso, X_train, Y_train)\n"
    ]
   },
@@ -233,13 +362,29 @@
     "coxnet_pred.set_params(**gcv.best_params_)\n",
     "coxnet_pred.fit(X_test, Y_test)\n",
     "\n",
-    "#surv_fns = coxnet_pred.predict_survival_function(X_test)\n"
+    "surv_fns = coxnet_pred.predict_survival_function(X_test)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca274eff",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98b9f353",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -253,7 +398,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8 (default, Apr 13 2021, 15:08:03) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.8.8"
   },
   "vscode": {
    "interpreter": {
