--- a/2_scripts/SANBS_explore.ipynb
+++ b/2_scripts/SANBS_explore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "2b73a0d5",
    "metadata": {},
    "outputs": [],
@@ -940,18 +940,62 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65bc97fa",
+   "id": "6c56e59a",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "id": "65bc97fa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\jagir\\anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3165: DtypeWarning: Columns (17) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "  has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n"
+     ]
+    }
+   ],
+   "source": [
+    "don=pd.read_csv(\"../1_data/private/don_hist.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "26920e52",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['DonorID', 'Visit_Date', 'Visit_yr', 'Visit_Mo', 'donation_time',\n",
+       "       'cum_lifetime_donations', 'col_Int', 'age', 'sex', 'Fixed', 'MobileID',\n",
+       "       'donation_product', 'DonProc', 'Outcome', 'blood_type',\n",
+       "       'Disease_marker_results', 'index_hgb', 'race_group', 'race',\n",
+       "       'index_ferritin', 'category', 'DefCode', 'Def_start', 'Def_end',\n",
+       "       'Deferral_permanent', 'EffectiveYr', 'EffectiveMo', 'unit_rbc_loss',\n",
+       "       'time_to_fu', 'rbc_loss_last_12_months', 'rbc_loss_last_24_months',\n",
+       "       'days_since_last_rbc_loss', 'days_since_last_drbc_loss',\n",
+       "       'index_log_ferritin', 'fu_hgb', 'fu_log_ferritin'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "don.columns\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
