--- a/2_scripts/03_penalized_cox_regression.ipynb
+++ b/2_scripts/03_penalized_cox_regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "d0aff929",
    "metadata": {},
    "outputs": [
@@ -10,8 +10,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jagir\\anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3165: DtypeWarning: Columns (17) have mixed types.Specify dtype option on import or set low_memory=False.\n",
+      "c:\\Users\\jagir\\anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3165: DtypeWarning: Columns (17) have mixed types.Specify dtype option on import or set low_memory=False.\n",
       "  has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4286365\n",
+      "596176\n"
      ]
     }
    ],
@@ -49,7 +57,9 @@
     "mask = (df['Visit_yr'] >= 2017) \n",
     "df = df.loc[mask]\n",
     "\n",
-    "df_cox=df "
+    "df_cox=df \n",
+    "print(len(df))\n",
+    "print(df['DonorID'].nunique())"
    ]
   },
   {
