--- a/2_scripts/SANBS_explore.ipynb
+++ b/2_scripts/SANBS_explore.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "2b73a0d5",
    "metadata": {},
    "outputs": [],
@@ -947,7 +947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "65bc97fa",
    "metadata": {},
    "outputs": [
@@ -958,40 +958,448 @@
       "c:\\Users\\jagir\\anaconda3\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3165: DtypeWarning: Columns (17) have mixed types.Specify dtype option on import or set low_memory=False.\n",
       "  has_raised = await self.run_ast_nodes(code_ast.body, cell_name,\n"
      ]
-    }
-   ],
-   "source": [
-    "don=pd.read_csv(\"../1_data/private/don_hist.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "26920e52",
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DonorID</th>\n",
+       "      <th>Visit_Date</th>\n",
+       "      <th>Visit_yr</th>\n",
+       "      <th>Visit_Mo</th>\n",
+       "      <th>donation_time</th>\n",
+       "      <th>cum_lifetime_donations</th>\n",
+       "      <th>col_Int</th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>Fixed</th>\n",
+       "      <th>...</th>\n",
+       "      <th>EffectiveMo</th>\n",
+       "      <th>unit_rbc_loss</th>\n",
+       "      <th>time_to_fu</th>\n",
+       "      <th>rbc_loss_last_12_months</th>\n",
+       "      <th>rbc_loss_last_24_months</th>\n",
+       "      <th>days_since_last_rbc_loss</th>\n",
+       "      <th>days_since_last_drbc_loss</th>\n",
+       "      <th>index_log_ferritin</th>\n",
+       "      <th>fu_hgb</th>\n",
+       "      <th>fu_log_ferritin</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>18353</td>\n",
+       "      <td>2018-07-03T00:00:00Z</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>7</td>\n",
+       "      <td>930</td>\n",
+       "      <td>23</td>\n",
+       "      <td>379</td>\n",
+       "      <td>41.9</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Fixed Clinic</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>72</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>379</td>\n",
+       "      <td>3650</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>18353</td>\n",
+       "      <td>2018-09-13T00:00:00Z</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1118</td>\n",
+       "      <td>24</td>\n",
+       "      <td>72</td>\n",
+       "      <td>42.1</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Fixed Clinic</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>68</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>72</td>\n",
+       "      <td>3650</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>15.8</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>18353</td>\n",
+       "      <td>2018-11-20T00:00:00Z</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1137</td>\n",
+       "      <td>25</td>\n",
+       "      <td>68</td>\n",
+       "      <td>42.3</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Fixed Clinic</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>67</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>68</td>\n",
+       "      <td>3650</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>18353</td>\n",
+       "      <td>2019-01-26T00:00:00Z</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1240</td>\n",
+       "      <td>26</td>\n",
+       "      <td>67</td>\n",
+       "      <td>42.5</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Fixed Clinic</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>59</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>67</td>\n",
+       "      <td>3650</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>18353</td>\n",
+       "      <td>2019-03-26T00:00:00Z</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1245</td>\n",
+       "      <td>27</td>\n",
+       "      <td>59</td>\n",
+       "      <td>42.6</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Fixed Clinic</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>57</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>59</td>\n",
+       "      <td>3650</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 36 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Index(['DonorID', 'Visit_Date', 'Visit_yr', 'Visit_Mo', 'donation_time',\n",
-       "       'cum_lifetime_donations', 'col_Int', 'age', 'sex', 'Fixed', 'MobileID',\n",
-       "       'donation_product', 'DonProc', 'Outcome', 'blood_type',\n",
-       "       'Disease_marker_results', 'index_hgb', 'race_group', 'race',\n",
-       "       'index_ferritin', 'category', 'DefCode', 'Def_start', 'Def_end',\n",
-       "       'Deferral_permanent', 'EffectiveYr', 'EffectiveMo', 'unit_rbc_loss',\n",
-       "       'time_to_fu', 'rbc_loss_last_12_months', 'rbc_loss_last_24_months',\n",
-       "       'days_since_last_rbc_loss', 'days_since_last_drbc_loss',\n",
-       "       'index_log_ferritin', 'fu_hgb', 'fu_log_ferritin'],\n",
-       "      dtype='object')"
+       "   DonorID            Visit_Date  Visit_yr  Visit_Mo  donation_time  \\\n",
+       "0    18353  2018-07-03T00:00:00Z      2018         7            930   \n",
+       "1    18353  2018-09-13T00:00:00Z      2018         9           1118   \n",
+       "2    18353  2018-11-20T00:00:00Z      2018        11           1137   \n",
+       "3    18353  2019-01-26T00:00:00Z      2019         1           1240   \n",
+       "4    18353  2019-03-26T00:00:00Z      2019         3           1245   \n",
+       "\n",
+       "   cum_lifetime_donations  col_Int   age sex         Fixed  ... EffectiveMo  \\\n",
+       "0                      23      379  41.9   M  Fixed Clinic  ...         NaN   \n",
+       "1                      24       72  42.1   M  Fixed Clinic  ...         NaN   \n",
+       "2                      25       68  42.3   M  Fixed Clinic  ...         NaN   \n",
+       "3                      26       67  42.5   M  Fixed Clinic  ...         NaN   \n",
+       "4                      27       59  42.6   M  Fixed Clinic  ...         NaN   \n",
+       "\n",
+       "  unit_rbc_loss time_to_fu rbc_loss_last_12_months rbc_loss_last_24_months  \\\n",
+       "0             1         72                       1                       2   \n",
+       "1             1         68                       2                       3   \n",
+       "2             1         67                       3                       4   \n",
+       "3             1         59                       4                       5   \n",
+       "4             1         57                       5                       6   \n",
+       "\n",
+       "  days_since_last_rbc_loss  days_since_last_drbc_loss index_log_ferritin  \\\n",
+       "0                      379                       3650                0.0   \n",
+       "1                       72                       3650                0.0   \n",
+       "2                       68                       3650                0.0   \n",
+       "3                       67                       3650                0.0   \n",
+       "4                       59                       3650                0.0   \n",
+       "\n",
+       "  fu_hgb  fu_log_ferritin  \n",
+       "0    NaN              0.0  \n",
+       "1   15.8              0.0  \n",
+       "2    NaN              0.0  \n",
+       "3    NaN              0.0  \n",
+       "4    NaN              0.0  \n",
+       "\n",
+       "[5 rows x 36 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "don.columns\n",
+    "don=pd.read_csv(\"../1_data/private/don_hist.csv\")\n",
+    "\n",
+    "don.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "26920e52",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>DonorID</th>\n",
+       "      <th>Visit_Date</th>\n",
+       "      <th>Visit_yr</th>\n",
+       "      <th>Visit_Mo</th>\n",
+       "      <th>donation_time</th>\n",
+       "      <th>cum_lifetime_donations</th>\n",
+       "      <th>col_Int</th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>Fixed</th>\n",
+       "      <th>...</th>\n",
+       "      <th>EffectiveMo</th>\n",
+       "      <th>unit_rbc_loss</th>\n",
+       "      <th>time_to_fu</th>\n",
+       "      <th>rbc_loss_last_12_months</th>\n",
+       "      <th>rbc_loss_last_24_months</th>\n",
+       "      <th>days_since_last_rbc_loss</th>\n",
+       "      <th>days_since_last_drbc_loss</th>\n",
+       "      <th>index_log_ferritin</th>\n",
+       "      <th>fu_hgb</th>\n",
+       "      <th>fu_log_ferritin</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>18353</td>\n",
+       "      <td>2018-07-03 00:00:00+00:00</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>7</td>\n",
+       "      <td>930</td>\n",
+       "      <td>23</td>\n",
+       "      <td>379</td>\n",
+       "      <td>41.9</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Fixed Clinic</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>72</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>379</td>\n",
+       "      <td>3650</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>18353</td>\n",
+       "      <td>2018-09-13 00:00:00+00:00</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1118</td>\n",
+       "      <td>24</td>\n",
+       "      <td>72</td>\n",
+       "      <td>42.1</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Fixed Clinic</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>68</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>72</td>\n",
+       "      <td>3650</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>15.8</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>18353</td>\n",
+       "      <td>2018-11-20 00:00:00+00:00</td>\n",
+       "      <td>2018</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1137</td>\n",
+       "      <td>25</td>\n",
+       "      <td>68</td>\n",
+       "      <td>42.3</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Fixed Clinic</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>67</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>68</td>\n",
+       "      <td>3650</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>18353</td>\n",
+       "      <td>2019-01-26 00:00:00+00:00</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1240</td>\n",
+       "      <td>26</td>\n",
+       "      <td>67</td>\n",
+       "      <td>42.5</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Fixed Clinic</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>59</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>67</td>\n",
+       "      <td>3650</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>18353</td>\n",
+       "      <td>2019-03-26 00:00:00+00:00</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1245</td>\n",
+       "      <td>27</td>\n",
+       "      <td>59</td>\n",
+       "      <td>42.6</td>\n",
+       "      <td>M</td>\n",
+       "      <td>Fixed Clinic</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>57</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>59</td>\n",
+       "      <td>3650</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 36 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   DonorID                Visit_Date  Visit_yr  Visit_Mo  donation_time  \\\n",
+       "0    18353 2018-07-03 00:00:00+00:00      2018         7            930   \n",
+       "1    18353 2018-09-13 00:00:00+00:00      2018         9           1118   \n",
+       "2    18353 2018-11-20 00:00:00+00:00      2018        11           1137   \n",
+       "3    18353 2019-01-26 00:00:00+00:00      2019         1           1240   \n",
+       "4    18353 2019-03-26 00:00:00+00:00      2019         3           1245   \n",
+       "\n",
+       "   cum_lifetime_donations  col_Int   age sex         Fixed  ... EffectiveMo  \\\n",
+       "0                      23      379  41.9   M  Fixed Clinic  ...         NaN   \n",
+       "1                      24       72  42.1   M  Fixed Clinic  ...         NaN   \n",
+       "2                      25       68  42.3   M  Fixed Clinic  ...         NaN   \n",
+       "3                      26       67  42.5   M  Fixed Clinic  ...         NaN   \n",
+       "4                      27       59  42.6   M  Fixed Clinic  ...         NaN   \n",
+       "\n",
+       "  unit_rbc_loss time_to_fu rbc_loss_last_12_months rbc_loss_last_24_months  \\\n",
+       "0             1         72                       1                       2   \n",
+       "1             1         68                       2                       3   \n",
+       "2             1         67                       3                       4   \n",
+       "3             1         59                       4                       5   \n",
+       "4             1         57                       5                       6   \n",
+       "\n",
+       "  days_since_last_rbc_loss  days_since_last_drbc_loss index_log_ferritin  \\\n",
+       "0                      379                       3650                0.0   \n",
+       "1                       72                       3650                0.0   \n",
+       "2                       68                       3650                0.0   \n",
+       "3                       67                       3650                0.0   \n",
+       "4                       59                       3650                0.0   \n",
+       "\n",
+       "  fu_hgb  fu_log_ferritin  \n",
+       "0    NaN              0.0  \n",
+       "1   15.8              0.0  \n",
+       "2    NaN              0.0  \n",
+       "3    NaN              0.0  \n",
+       "4    NaN              0.0  \n",
+       "\n",
+       "[5 rows x 36 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "\n",
     "\n",
     "\n"
